[gd_scene load_steps=3 format=3 uid="uid://crafting_popup_scene"]

[ext_resource type="Script" path="res://scripts/ui/popups/CraftingPopup.gd" id="1_crafting"]
[ext_resource type="Theme" path="res://themes/main_theme.tres" id="2_theme"]

[node name="CraftingPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_crafting")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -350.0
offset_right = 500.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="WorkbenchInfo" type="Label" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ðŸ”¨ WORKBENCH - Livello 1 | AbilitÃ : 1"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeListContainer" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RecipeListLabel" type="Label" parent="BackgroundPanel/VBoxContainer/ContentContainer/RecipeListContainer"]
layout_mode = 2
text = "ðŸ“‹ RICETTE DISPONIBILI"
horizontal_alignment = 1

[node name="RecipeListScroll" type="ScrollContainer" parent="BackgroundPanel/VBoxContainer/ContentContainer/RecipeListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipeListVBox" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer/ContentContainer/RecipeListContainer/RecipeListScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="BackgroundPanel/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="RecipeDetails" type="RichTextLabel" parent="BackgroundPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=#666666]Seleziona una ricetta per vedere i dettagli...[/color]"
fit_content = true
scroll_active = true
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="CraftButton" type="Button" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "ðŸ”¨ CRAFTA [ENTER]"
disabled = true